@@ -27,6 +27,7 @@
 - add WITH_LIBTIRPC to -V status report.
 - add nfs mount protocol default configuration option.
 - fix bad token declaration in master map parser.
+- fix return start status on fail.
 
 4/11/2008 autofs-5.0.4
 -----------------------
